major update checkpoint, working on replaceLocalImages
